# api_dock

./: .gitignore  CLOUD_STORAGE_AUTH.md  ENCRYPTION_SETUP.md  README.md  TABLE_CONFIG_REFERENCE.md  __init__.py  example_root_response.json  package_names.txt  pypi_package_names.txt  pyproject.toml
.github/workflows/: publish_to_pypi.yml
api_base/: __init__.py  cli.py  config.py  config_discovery.py  database_config.py  fast_api.py  flask_api.py  route_mapper.py  sql_builder.py
api_box/: __init__.py  cli.py  config.py  config_discovery.py  database_config.py  fast_api.py  flask_api.py  main.py  route_mapper.py  sql_builder.py
api_dock/: __init__.py  auth.py  cli.py  config.py  config_discovery.py  database_config.py  encryption.py  fast_api.py  flask_api.py  route_mapper.py  sql_builder.py  storage_auth.py  types.py
api_dock/example_api_dock_config/: config.yaml
api_dock/example_api_dock_config/databases/: example_db.yaml
api_dock/example_api_dock_config/remotes/: example_remote.yaml
config/: config.yaml
config/databases/: test_users.yaml
tests/: __init__.py  test_config_syntax.py  test_curl_fixes.py  test_inject_cookies.py  test_proxy_pipeline.py  test_restrictions.py  test_root_endpoint.py  test_sql_append.py  test_types.py
