[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "api_box"
version = "0.0.1"
readme = "README.md"
dependencies = [
    "fastapi",
    "uvicorn",
    "pyyaml",
    "httpx"
]

[project.scripts]
api-box = "api_box.cli:main"

[tool.setuptools]
packages = [
	"api_box",
	# "api_box.utils"
]

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["linux-64", "osx-64", "osx-arm64"]

[tool.pixi.pypi-dependencies]
api_box = { path = ".", editable = true }

[tool.pixi.dependencies]
pycodestyle = ">=2.14.0,<3"
ipykernel = ">=6.30.1,<7"
jupyterlab = ">=4.4.9,<5"
numpy = ">=2.3.3,<3"
pandas = ">=2.3.2,<3"
fastapi = ">=0.117.1,<0.118"
uvicorn = ">=0.37.0,<0.38"
pyyaml = ">=6.0.3,<7"
httpx = ">=0.28.1,<0.29"
flask = ">=3.1.2,<4"
